* added overloaded "registerSingleton"/"registerPrototype" methods without property values to StaticApplicationContext

Package org.springframework.core
* fixed FileSystemResource's "createRelative" to correctly apply a given relative path when starting from a directory

Package org.springframework.jdbc
* DataSourceUtils only executes Connection cleanup in "beforeCompletion" synchronization if there are no open references
* added C3P0NativeJdbcExtractor for C3P0 0.8.5 or later (for earlier C3P0 versions, use SimpleNativeJdbcExtractor)
* added "maxRows" bean property to JdbcTemplate, allowing to specify the maximum number of rows to be fetched
* added "fetchSize" and "maxRows" bean properties to RdbmsOperation, passing the values to the internal JdbcTemplate

Package org.springframework.mail
* introduced MailMessage interface as common interface for SimpleMailMessage and JavaMail MIME messages
* added MimeMailMessage implementation of MailMessage interface, as adapter for a MimeMessageHelper or a MimeMessage

Package org.springframework.mock
* upgraded MockHttpServletRequest to Servlet API 2.4 (added getRemotePort, getLocalName, getLocalAddr, getLocalPort)
* upgraded MockPageContext to JSP API 2.0 (added getExpressionEvaluator, getVariableResolver, overloaded include)
* added MockExpressionEvaluator for JSP 2.0, delegating to the Jakarta JSTL ExpressionEvaluatorManager
* fixed MockHttpServletRequest to create a new HttpSession if the previous session has been invalidated
* fixed MockHttpServletResponse to use "ISO-8859-1" as default character encoding

Package org.springframework.orm
* reworked SqlMapClientTemplate to execute calls directly on SqlMapClient in case of TransactionAwareDataSourceProxy
* fixed AbstractLobType for Hibernate, cleaning up in afterCompletion if necessary (for HibernateTransactionManager)
* AbstractLobType uses low order value for transaction synchronizations, to always execute before resource cleanup