@@ -74,6 +74,17 @@ public interface JdbcOperations {
 	void execute(String sql) throws DataAccessException;
 
 	/**
+	 * Issue multiple SQL execute on a single Statement, using JDBC 2.0
+	 * batching.
+	 * <p>Will fall back to separate executes on a single Statement
+	 * if the JDBC driver does not support batch updates.
+	 * @param sql defining an array of SQL statements that will be executed.
+	 * @return an array of the number of rows affected by each statement
+	 * @throws DataAccessException if there is any problem executing the batch
+	 */
+	int[] batchExecute(String[] sql) throws DataAccessException;
+
+	/**
 	 * Execute a query given static SQL, reading the ResultSet with a
 	 * ResultSetExtractor.
 	 * <p>Uses a JDBC Statement, not a PreparedStatement. If you want to execute
